src/objects/loan__Refinance_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refinance Transactions (Account)</relationshipLabel>
        <relationshipName>Refinance_Txn_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Actual_Refinance_Amount__c</fullName>
        <inlineHelpText>Actual Payoff Amount of the Refinanced Loan</inlineHelpText>
        <label>Actual Refinance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Refinance Transactions (Contact)</relationshipLabel>
        <relationshipName>Refinance_Txn_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Expected_Refinance_Amount__c</fullName>
        <inlineHelpText>Expected Payoff Amount of the Refinanced Loan at the time of Refinance Transaction creation</inlineHelpText>
        <label>Expected Refinance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Contracts Refinanced</relationshipLabel>
        <relationshipName>Refinance_Txn_Loan_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Settled in this Disbursal Transaction</inlineHelpText>
        <label>Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipLabel>Refinance Transactions</relationshipLabel>
        <relationshipName>Refinance_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Refinance_Transaction_Date__c</fullName>
        <inlineHelpText>Refinance Transaction creation date</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Refinanced_Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account (Refinanced)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
                <operation>equals</operation>
                <value>Active - Good Standing, Active - Bad Standing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Refinanced To Contract</relationshipLabel>
        <relationshipName>Refinanced_Loan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Refinanced_Loan_Current_Status__c</fullName>
        <formula>TEXT(loan__Refinanced_Loan_Account__r.loan__Loan_Status__c)</formula>
        <inlineHelpText>Current Status of Refinanced Loan Account</inlineHelpText>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Settled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked, when the pay-off transaction of refinanced loan account is cleared</inlineHelpText>
        <label>Settled</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Refinance Transaction</label>
    <nameField>
        <displayFormat>RTID-{00000000}</displayFormat>
        <label>Refinance Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Refinance Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Refinance_Contract_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Refinanced_Loan_Account__c == null</errorConditionFormula>
        <errorMessage>Loan Account (to be Refinanced) cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Refinance_Transaction_Date__c == null</errorConditionFormula>
        <errorMessage>Transaction date cannot be null.</errorMessage>
    </validationRules>
</CustomObject>